@@ -26,6 +26,7 @@ const char *get_source_encoding (const char *lang);
 char *get_standard_output_encoding (const char *lang);
 const char *get_canonical_charset_name (const char *charset);
 const char *get_locale_charset (void);
+char *find_charset_locale (const char *charset);
 const char *get_default_device (const char *locale_charset,
 				const char *source_encoding);
 int is_roff_device (const char *device);
